--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "3c9979a2-e19d-4655-aaf6-38a40ebf116d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "defbd597-d4c2-45ea-8005-eb408220c4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('C:/Users/DELL/anaconda_projects/Snap Deal Project/Online Retail.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5d967f47-efa4-40c1-910d-413a1d4cd56f",
+   "id": "5b199d02-dc10-447a-9bd7-13dd09666ba7",
    "metadata": {},
    "outputs": [],
    "source": []
