--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -347,24 +347,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "d74060a7-bdb2-4fef-ada2-51e15b4ee7da",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[38;5;241m.\u001b[39minfo()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>541904</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22613</td>\n",
+       "      <td>PACK OF 20 SPACEBOY NAPKINS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541905</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22899</td>\n",
+       "      <td>CHILDREN'S APRON DOLLY GIRL</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541906</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23254</td>\n",
+       "      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541907</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23255</td>\n",
+       "      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541908</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22138</td>\n",
+       "      <td>BAKING SET 9 PIECE RETROSPOT</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2011-12-09 12:50:00</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       InvoiceNo StockCode                      Description  Quantity  \\\n",
+       "541904    581587     22613      PACK OF 20 SPACEBOY NAPKINS        12   \n",
+       "541905    581587     22899     CHILDREN'S APRON DOLLY GIRL          6   \n",
+       "541906    581587     23254    CHILDRENS CUTLERY DOLLY GIRL          4   \n",
+       "541907    581587     23255  CHILDRENS CUTLERY CIRCUS PARADE         4   \n",
+       "541908    581587     22138    BAKING SET 9 PIECE RETROSPOT          3   \n",
+       "\n",
+       "               InvoiceDate  UnitPrice  CustomerID Country  \n",
+       "541904 2011-12-09 12:50:00       0.85     12680.0  France  \n",
+       "541905 2011-12-09 12:50:00       2.10     12680.0  France  \n",
+       "541906 2011-12-09 12:50:00       4.15     12680.0  France  \n",
+       "541907 2011-12-09 12:50:00       4.15     12680.0  France  \n",
+       "541908 2011-12-09 12:50:00       4.95     12680.0  France  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()"
+    "df.tail()"
    ]
   },
   {
